# IMSystem

./: .gitignore  README.md
client/: CMakeLists.txt  main.cpp
client/cpp/: clientfacade.cpp  clientfacade.h  protocolframe.h  tcpclient.cpp  tcpclient.h
client/cpp/ai/: messageclassifier.cpp  messageclassifier.h  taskextractor.cpp  taskextractor.h
client/cpp/core/: clientsettings.cpp  clientsettings.h
client/cpp/model/: contactlistmodel.cpp  contactlistmodel.h  conversationlistmodel.cpp  conversationlistmodel.h  currentusermodel.cpp  currentusermodel.h  friendrequestlistmodel.cpp  friendrequestlistmodel.h  grouplistmodel.cpp  grouplistmodel.h  messagelistmodel.cpp  messagelistmodel.h  tasklistmodel.cpp  tasklistmodel.h
client/cpp/network/: clientmessagerouter.cpp  clientmessagerouter.h  protocolframe.h  tcpclient.cpp  tcpclient.h
client/cpp/service/: authservice.cpp  authservice.h  chatservice.cpp  chatservice.h  contactservice.cpp  contactservice.h  groupservice.cpp  groupservice.h
client/cpp/storage/: chatlocalstore.cpp  chatlocalstore.h
client/qml/: Main.qml
client/qml/components/: ImAvatar.qml
client/qml/navigation/: Nav.qml
client/qml/pages/: AddFriendPage.qml  ChatPage.qml  ContactsPage.qml  CreateGroupPage.qml  FriendRequestsPage.qml  GroupInfoPage.qml  InviteMemberPage.qml  LoginPage.qml  MainPage.qml  MessagesPage.qml  ProfilePage.qml  RegisterPage.qml  TaskPage.qml
client/qml/style/: Theme.qml
common/: msg_ids.h
docs/vp/: IM_system.vpp
docs/设计文档/: .~lock.设计文档.odt#  设计文档.odt
server/: CMakeLists.txt  main.cpp
server/business/: echohandler.cpp  echohandler.h  friendhandler.cpp  friendhandler.h  grouphandler.cpp  grouphandler.h  handler.cpp  handler.h  loginhandler.cpp  loginhandler.h  privatechathandler.cpp  privatechathandler.h  registerhandler.cpp  registerhandler.h  searchuserhandler.cpp  searchuserhandler.h
server/database/: databasemanager.cpp  databasemanager.h
server/network/: acceptor.cpp  acceptor.h  buffer.h  channel.cpp  channel.h  eventloop.cpp  eventloop.h  msgnode.cpp  msgnode.h  networkconst.h  socket.cpp  socket.h  tcpconnection.cpp  tcpconnection.h  tcpserver.cpp  tcpserver.h
server/utility/: logicnode.cpp  logicnode.h  logicsystem.cpp  logicsystem.h  mesrout.cpp  mesrout.h  messagedispatcher.cpp  messagedispatcher.h  msgIdconst.h  offlinemessagekind.h  onlineuserproxy.h  onlineusersmanager.cpp  onlineusersmanager.h  passwordhash.cpp  passwordhash.h  singleton.h
